src/objects/Website_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Website Activities</relationshipLabel>
        <relationshipName>Website_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityDate__c</fullName>
        <label>Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Website Activities</relationshipLabel>
        <relationshipName>Website_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PageTitle__c</fullName>
        <label>Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PageURL__c</fullName>
        <label>Page URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Percent_Viewed__c</fullName>
        <label>Percent Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Video View</fullName>
                </value>
                <value>
                    <fullName>Page View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Website Activity</label>
    <nameField>
        <displayFormat>WA-{000000}</displayFormat>
        <label>Website Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Website Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>